--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 <body>
-    
+    <header>
+        <h1>Learn to <span class="orange-highlight">Code</span></h1>
+        <nav id="nav-bar">
+            <ul class="nav-list">
+                <li><a href="link to bootcamps">Bootcamps</a></li>
+                <li><a href="link to workshops">Workshops</a></li>
+                <li><a href="link to custom training">Custom Training</a></li>
+                <li><a href="link to Student Stories">Student Stories</a></li>
+            </ul> 
+            <a id="button" href="link to contact us">Contact Us</a>   
+        </nav>      
+    </header>
+    <main>
+        <section>
+            <h2>Do you think about <span class="orange-highlight">learning to code?</span></h2>
+            <p>Learn to code and develop a new career!</p>
+            <a id="button" href="link to learn more">Learn More</a>
+        </section>
+        <img id="home-page-pic" src="code.png" height="400px" alt="Cartoon of two people holding coding symbols"/>
+   </main>
 </body>
-</html>l
+</html>
